--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,10 @@
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
-<h1>What's VisualVM?</h1>
+<h2>What's VisualVM?</h2>
 <p>VisualVM is a visual tool that integrates several existing JDK software tools and lightweight memory and CPU profiling capabilities. This tool is designed for both production and development time use and further enhances the capability of monitoring and performance analysis for the Java SE platform.</p>
+<h2>What's the status?</h2>
+<p>Currently we are working on preview version of the VisualVM. Source code and downloads will be available soon.</p>
 </body>
 </html>
 
