--- a/www/index.html
+++ b/www/index.html
@@ -5,10 +5,12 @@
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
-<h2>What's VisualVM?</h2>
+<h3>What's VisualVM?</h3>
 <p>VisualVM is a visual tool that integrates several existing JDK software tools and lightweight memory and CPU profiling capabilities. This tool is designed for both production and development time use and further enhances the capability of monitoring and performance analysis for the Java SE platform.</p>
-<h2>What's the status?</h2>
-<p>Currently we are working on preview version of the VisualVM. Source code and downloads will be available soon.</p>
+<h3>What's The Status?</h3>
+<p>Currently we are working on a preview version of the VisualVM. Source code and downloads will be available soon.</p>
+<h3>Want More Information?</h3>
+<p>The proof-of-concept version of the tool has been presented at JavaOne 2007 as a BOF-9123. You can download the presentation slides <a href="http://weblogs.java.net/blog/mandychung/archive/VisualVM-BOF-2007.pdf">here</a>. </p>
 </body>
 </html>
 
