--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,45 @@
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
-<h4>What's VisualVM?</h4>
+  
+<h2>What's VisualVM?</h2>
 <p>VisualVM is a visual tool that integrates several existing JDK software tools and lightweight memory and CPU profiling capabilities. This tool is designed for both production and development time use and further enhances the capability of monitoring and performance analysis for the Java SE platform.</p>
-<h4>What's The Status?</h4>
+<div>
+<table>
+  <tr>
+    <td align="center" style="padding-left: 20px; padding-right: 20px;">
+
+      <a href="images/screenshot1.png" target="_blank"><img src="images/screenshot1_small.png" alt="Overview of running Java application" border="0"></a>
+    </td>
+    <td align="center" style="padding-left: 20px; padding-right: 20px;">
+      <a href="images/screenshot2.png" target="_blank"><img src="images/screenshot2_small.png" alt="Basic telemetry of running Java application" border="0"></a>
+    </td>
+    <td align="center" style="padding-left: 20px; padding-right: 20px;">
+      <a href="images/screenshot3.png" target="_blank"><img src="images/screenshot3_small.png" alt="Profiling performance of running Java application" border="0"></a>
+    </td>
+  </tr>
+
+  <tr>
+    <td align="center" valign="top" style="padding-left: 20px; padding-right: 20px;">
+      <span style="font-weight: bold; font-size: smaller;">Overview of running Java application</span>
+    </td>
+    <td align="center" valign="top" style="padding-left: 20px; padding-right: 20px;">
+      <span style="font-weight: bold; font-size: smaller;">Basic telemetry of running Java application</span>
+    </td>
+    <td align="center" valign="top" style="padding-left: 20px; padding-right: 20px;">
+      <span style="font-weight: bold; font-size: smaller;">Profiling performance of running Java application</span>
+    </td>
+  </tr>
+
+</table>
+</div>
+
+<h2>What's The Status?</h2>
 <p>Currently we are working on a preview version of the VisualVM. Source code and downloads will be available soon.</p>
-<h4>Want More Information?</h4>
+
+<h2>Want More Information?</h2>
 <p>The proof-of-concept version of the tool has been presented at JavaOne 2007 as a BOF-9123. You can download the presentation slides <a href="http://weblogs.java.net/blog/mandychung/archive/VisualVM-BOF-2007.pdf">here</a>. </p>
+
 </body>
 </html>
 
