--- a/www/index.html
+++ b/www/index.html
@@ -25,13 +25,13 @@
 
   <tr>
     <td align="center" valign="top" style="padding-left: 20px; padding-right: 20px;">
-      <span style="font-weight: bold; font-size: smaller;">Overview of running Java application</span>
+      <center style="font-weight: bold; font-size: smaller;">Overview of running Java application</center>
     </td>
     <td align="center" valign="top" style="padding-left: 20px; padding-right: 20px;">
-      <span style="font-weight: bold; font-size: smaller;">Basic telemetry of running Java application</span>
+      <center style="font-weight: bold; font-size: smaller;">Basic telemetry of running Java application</center>
     </td>
     <td align="center" valign="top" style="padding-left: 20px; padding-right: 20px;">
-      <span style="font-weight: bold; font-size: smaller;">Profiling performance of running Java application</span>
+      <center style="font-weight: bold; font-size: smaller;">Profiling performance of running Java application</center>
     </td>
   </tr>
 
