--- a/www/index.html
+++ b/www/index.html
@@ -12,14 +12,13 @@
 <table>
   <tr>
     <td align="center" style="padding-left: 20px; padding-right: 20px;">
-
-      <a href="images/screenshot1.png" target="_blank"><img src="images/screenshot1_small.png" alt="Overview of running Java application" border="0"></a>
+      <center><a href="images/screenshot1.png" target="_blank"><img src="images/screenshot1_small.png" alt="Overview of running Java application" border="0"></a></center>
     </td>
     <td align="center" style="padding-left: 20px; padding-right: 20px;">
-      <a href="images/screenshot2.png" target="_blank"><img src="images/screenshot2_small.png" alt="Basic telemetry of running Java application" border="0"></a>
+      <center><a href="images/screenshot2.png" target="_blank"><img src="images/screenshot2_small.png" alt="Basic telemetry of running Java application" border="0"></a></center>
     </td>
     <td align="center" style="padding-left: 20px; padding-right: 20px;">
-      <a href="images/screenshot3.png" target="_blank"><img src="images/screenshot3_small.png" alt="Profiling performance of running Java application" border="0"></a>
+      <center><a href="images/screenshot3.png" target="_blank"><img src="images/screenshot3_small.png" alt="Profiling performance of running Java application" border="0"></a></center>
     </td>
   </tr>
 
