Publishing Visual VM - Preview 1
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@16 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -37,11 +37,11 @@
 </table>
 </div>
 
-<h2>What's The Status?</h2>
-<p>Currently we are working on a preview version of the VisualVM. Source code and downloads will be available soon.</p>
+<h2>Features</h2>
+<p>Current feature set of the tool is described in the <a href="description.html">Introduction to VisualVM</a> document.</p>
 
-<h2>Want More Information?</h2>
-<p>The proof-of-concept version of the tool has been presented at JavaOne 2007 as a BOF-9123. You can download the presentation slides <a href="http://weblogs.java.net/blog/mandychung/archive/VisualVM-BOF-2007.pdf">here</a>. </p>
+<h2>Download</h2>
+<p>You can download the fist preview version of the tool <a href="downloads/visualvm_preview1.zip">here</a>. Currently you can get only the binaries, sources will be available soon.</p>
 
 </body>
 </html>
