--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
 <p>Current feature set of the tool is described in the <a href="description.html">Introduction to VisualVM</a> document.</p>
 
 <h2>Download</h2>
-<p>You can download the fist preview version of the tool <a href="downloads/visualvm_preview1.zip">here</a>. Currently you can get only the binaries, sources will be available soon.</p>
+<p>You can download the first preview version of the tool <a href="downloads/visualvm_preview1.zip">here</a>. Currently you can get only the binaries, sources will be available soon.</p>
 
 </body>
 </html>
