Added feedback link to frontpage
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@18 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,9 @@
 <h2>Download</h2>
 <p>You can download the first preview version of the tool <a href="downloads/visualvm_preview1.zip">here</a>. Currently you can get only the binaries, sources will be available soon.</p>
 
+<h2>Feedback</h2>
+<p>Please send us your feedback: <a href="mailto:feedback@visualvm.dev.java.net">feedback@visualvm.dev.java.net</a>.</p>
+
 </body>
 </html>
 
