--- a/www/description.html
+++ b/www/description.html
@@ -126,6 +126,14 @@
             <tr><td>Heap Dump</td><td>&nbsp</td><td>&nbsp</td><td><img src="images/check.png"/></td></tr>
             <tr><td>Enable Heap Dump on OOME</td><td>&nbsp</td><td>&nbsp</td><td><img src="images/check.png"/></td></tr>
         </table>
+        
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-1306237-2";
+urchinTracker();
+</script>
+        
     </body>
 </html>
 
