--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,13 @@
 <h2>Feedback</h2>
 <p>Please send us your feedback: <a href="mailto:feedback@visualvm.dev.java.net">feedback@visualvm.dev.java.net</a>.</p>
 
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-1306237-2";
+urchinTracker();
+</script>
+
 </body>
 </html>
 
