Minor description improvements
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@21 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/description.html
+++ b/www/description.html
@@ -29,12 +29,12 @@
             <code>\bin</code> folder under the VisualVM install folder.  
             On Unix or Linux use the visualvm shell script that is in the <code>/bin</code>
             folder under the VisualVM install folder. You may specify the JDK which runs VisualVM
-            and/or user directory using command line parameters or by modifying <code>/etc/visualvm.conf</code>
-            file. Example command for starting VisualVM on Windows is:
+            and/or user directory using command line parameters or by modifying <code>etc\visualvm.conf</code>
+            file. Example command for starting VisualVM with custom JDK and userdir on Windows is:
         </p>
         <p>
           <pre>
-  visualvm.exe --jdkhome "C:\Software\Java\jdk1.6.0_03" --userdir "C:\Temp\visualvm_userdir"
+  visualvm.exe --jdkhome "C:\Software\Java\jdk1.6.0" --userdir "C:\Temp\visualvm_userdir"
           </pre>
         </p>
         <p>The initial display is shown in Figure 1. The Applications window has three 
