Tweaking introduction page
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@23 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/description.html
+++ b/www/description.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>Introduction to VisualVM</title>
         <link rel="stylesheet" type="text/css" href="default.css">
     </head>
     <body>
