--- a/www/index.html
+++ b/www/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
 <title>Project Home Page</title>
+<link rel="stylesheet" type="text/css" href="default.css">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
-<body bgcolor="#FFFFFF" text="#000000">
+<body>
   
 <h2>What's VisualVM?</h2>
 <p>VisualVM is a visual tool that integrates several existing JDK software tools and lightweight memory and CPU profiling capabilities. This tool is designed for both production and development time use and further enhances the capability of monitoring and performance analysis for the Java SE platform.</p>
