--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -18,9 +18,9 @@ Getting Started part of the <a href="description.html">Introduction to VisualVM<
 for details and fix or <i>having temporary directory on a FAT disk</i> - see <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=5042659">this bug detail</a>
 for details and fix.</p><br>
 
-<h3>Thread Dump, Heap Dump or Profiling Does Not Work</h3>
-<p><b>Description:&nbsp;</b>Thread dump or heap dump cannot be taken or profiling doesn't work for applications running on JDK 6.0.</p>
-<p><b>Resolution:&nbsp;&nbsp;</b>All these features utilize dynamic attach feature of JDK 6.0. There is a known problem with dynamic attach, it may
+<h3>Profiling Does Not Work</h3>
+<p><b>Description:&nbsp;</b>Profiling doesn't work for applications running on JDK 6.0.</p>
+<p><b>Resolution:&nbsp;&nbsp;</b>There is a known problem with dynamic attach which is used for profiling, it may
     cause target JVM to crash when class sharing is enabled. To start an application without class sharing, provide <code>-Xshare:off</code> argument
 to the <code>java</code> command starting the app. More information can be found in <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6497639">this</a>
 and <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=75eeb97f40427854daec7d1fcd3?bug_id=6598065">this</a> bug detail.</p><br>
