Troubleshooting document linked from frontpage
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@32 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,9 @@
 <h4>Download</h4>
 <p>You can download the first preview version of the tool <a href="downloads/visualvm_preview1.zip">here</a>. Currently you can get only the binaries, sources will be available soon.</p>
 
+<h4>Troubleshooting</h4>
+<p>Troubleshooting guide for currently known problems can be found <a href="troubleshooting.html">here</a>.</p>
+
 <h4>Feedback</h4>
 <p>Please send us your feedback: <a href="mailto:feedback@visualvm.dev.java.net">feedback@visualvm.dev.java.net</a>.</p>
 
