--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -28,6 +28,11 @@ for details and fix.</p><br>
 to the <code>java</code> command starting the app. More information can be found in <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6497639">this</a>
 and <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=75eeb97f40427854daec7d1fcd3?bug_id=6598065">this</a> bug detail.</p><br>
 
+<h3>Profiling does not work on Mac OS X</h3>
+<p><b>Description:&nbsp;</b>Profiling doesn't work for applications running on Developer preview of JDK 6.0.</p>
+<p><b>Resolution:&nbsp;&nbsp;</b>Unfortunately profiling does not work with JDK 6.0, due to bug in JDK. However you can
+    still take thread and heap dumps of applications running on JDK 6.0.</p><br>
+
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
