--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -12,7 +12,7 @@
 <h3>VisualVM Application Window Is Empty, Exception Is Thrown</h3>
 <p><b>Description:&nbsp;</b>Main window of VisualVM is empty, <code>java.lang.ClassNotFoundException: sun.jvmstat.monitor.MonitorException</code> may be presented to the user and is logged in the logfile.</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>This happens when VisualVM runs on JRE instead of JDK. To define which JDK will be used for running VisualVM, follow the steps in 
-Getting Started part of the <a href="description.html">Introduction to VisualVM</a> document.</p><br>
+Getting Started section of the <a href="description.html">Introduction to VisualVM</a> document.</p><br>
 
 <h3>No Running Local Applications Detected</h3>
 <p><b>Description:&nbsp;</b>There are no running applications shown in the Applications window on the left side (including the VisualVM itself).</p>
@@ -20,6 +20,12 @@ Getting Started part of the <a href="description.html">Introduction to VisualVM<
     detect running Java applications. There are two main root causes: <i>broken access rights to temporary directory on a NTFS disk</i> - see <a href="http://forum.java.sun.com/thread.jspa?threadID=5133218&tstart=0">this thread</a>
 for details and fix or <i>having temporary directory on a FAT disk</i> - see <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=5042659">this bug detail</a>
 for details and fix.</p><br>
+
+<h3>No Running Remote Applications Detected</h3>
+<p><b>Description:&nbsp;</b>There are no running applications shown for remote host in the Applications window on the left side.</p>
+<p><b>Resolution:&nbsp;&nbsp;</b>Make sure that the <code>jstatd</code> utility is running on the remote host you want to monitor.
+This is a requirement for VisualVM to be able to discover and access remote Java applications. More information about <code>jstatd</code> can be found
+in Remote Applications section of the <a href="description.html">Introduction to VisualVM</a> document.</p><br>
 
 <h3>Profiling Does Not Work</h3>
 <p><b>Description:&nbsp;</b>Profiling doesn't work for applications running on JDK 6.0.</p>
