Updated Introduction, Troubleshooting
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@40 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -12,7 +12,7 @@
 <h3>VisualVM Application Window Is Empty, Exception Is Thrown</h3>
 <p><b>Description:&nbsp;</b>Main window of VisualVM is empty, <code>java.lang.ClassNotFoundException: sun.jvmstat.monitor.MonitorException</code> may be presented to the user and is logged in the logfile.</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>This happens when VisualVM runs on JRE instead of JDK. To define which JDK will be used for running VisualVM, follow the steps in 
-Getting Started section of the <a href="description.html">Introduction to VisualVM</a> document.</p><br>
+Getting Started section of the <a href="description.html#getting_started">Introduction to VisualVM</a> document.</p><br>
 
 <h3>No Running Local Applications Detected</h3>
 <p><b>Description:&nbsp;</b>There are no running applications shown in the Applications window on the left side (including the VisualVM itself).</p>
@@ -25,7 +25,7 @@ for details and fix.</p><br>
 <p><b>Description:&nbsp;</b>There are no running applications shown for remote host in the Applications window on the left side.</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>Make sure that the <code>jstatd</code> utility is running on the remote host you want to monitor.
 This is a requirement for VisualVM to be able to discover and access remote Java applications. More information about <code>jstatd</code> can be found
-in Remote Applications section of the <a href="description.html">Introduction to VisualVM</a> document.</p><br>
+in Remote Applications section of the <a href="description.html#remote_applications">Introduction to VisualVM</a> document.</p><br>
 
 <h3>Profiling Does Not Work</h3>
 <p><b>Description:&nbsp;</b>Profiling doesn't work for applications running on JDK 6.0.</p>
