Added Google Analytics tracking for feedback@visualvm
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@42 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -49,10 +49,19 @@
 <h4>Feedback</h4>
 <p>Please send us your feedback: <a href="mailto:feedback@visualvm.dev.java.net">feedback@visualvm.dev.java.net</a>.</p>
 
+<!-- GOOGLE ANALYTICS TRACKING FOR PROFILER -->    
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1306237-2";
+urchinTracker();
+</script>
+
+<!-- GOOGLE ANALYTICS TRACKING FOR VISUALVM -->    
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2829344-1";
 urchinTracker();
 </script>
 
