--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -39,6 +39,7 @@ and <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=75eeb97f4042
 <p><b>Resolution:&nbsp;&nbsp;</b>Unfortunately profiling does not work with Developer preview of JDK 6.0, due to bug in the JDK. However you can
     still take thread and heap dumps of applications running on JDK 6.0 on Mac OS X.</p><br>
 
+<!-- GOOGLE ANALYTICS TRACKING FOR PROFILER -->    
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
@@ -46,6 +47,14 @@ _uacct = "UA-1306237-2";
 urchinTracker();
 </script>
 
+<!-- GOOGLE ANALYTICS TRACKING FOR VISUALVM -->    
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2829344-1";
+urchinTracker();
+</script>
+    
 </body>
 </html>
 
