--- a/www/description.html
+++ b/www/description.html
@@ -147,10 +147,19 @@
             <tr><td>Enable Heap Dump on OOME</td><td>&nbsp</td><td>&nbsp</td><td><img src="images/check.png"/></td></tr>
         </table>
         
+<!-- GOOGLE ANALYTICS TRACKING FOR PROFILER -->    
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1306237-2";
+urchinTracker();
+</script>
+
+<!-- GOOGLE ANALYTICS TRACKING FOR VISUALVM -->    
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2829344-1";
 urchinTracker();
 </script>
         
