--- a/www/description.html
+++ b/www/description.html
@@ -137,14 +137,14 @@
             is running on JDK 1.4.2 or JDK 5.  The table below shows the available features.
         </p>
         <table border=1>
-            <tr><td>Feature</td><td align="center" width="15%">1.4.2 <small>local/remote</small></td><td align="center" width="15%">5 <small>local/remote</small></td><td align="center" width="15%">6 <small>local</small></td><td align="center" width="15%">6 <small>remote</small></td></tr>
-            <tr><td>Overview</td><td align="center"><img src="images/check.png"/></td><td align="center"><img src="images/check.png"/></td><td align="center"><img src="images/check.png"/></td><td align="center"><img src="images/check.png"/></td></tr>
-            <tr><td>System Properties (in Overview)</td><td align="center">&nbsp</td><td>&nbsp</td><td align="center"><img src="images/check.png"/></td><td>&nbsp</td></tr>
-            <tr><td>Monitor</td><td>&nbsp</td><td align="center"><img src="images/check.png"/></td><td align="center"><img src="images/check.png"/></td><td align="center"><img src="images/check.png"/></td></tr>
-            <tr><td>Profiler</td><td>&nbsp</td><td>&nbsp</td><td align="center"><img src="images/check.png"/></td><td>&nbsp</td></tr>
-            <tr><td>Thread Dump</td><td>&nbsp</td><td>&nbsp</td><td align="center"><img src="images/check.png"/></td><td>&nbsp</td></tr>
-            <tr><td>Heap Dump</td><td>&nbsp</td><td>&nbsp</td><td align="center"><img src="images/check.png"/></td><td>&nbsp</td></tr>
-            <tr><td>Enable Heap Dump on OOME</td><td>&nbsp</td><td>&nbsp</td><td align="center"><img src="images/check.png"/></td><td>&nbsp</td></tr>
+            <tr><td>Feature</td><td style="text-align:center;" width="15%">1.4.2 <small>local/remote</small></td><td style="text-align:center;" width="15%">5 <small>local/remote</small></td><td style="text-align:center;" width="15%">6 <small>local</small></td><td style="text-align:center;" width="15%">6 <small>remote</small></td></tr>
+            <tr><td>Overview</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
+            <tr><td>System Properties (in Overview)</td><td style="text-align:center;">&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
+            <tr><td>Monitor</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
+            <tr><td>Profiler</td><td>&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
+            <tr><td>Thread Dump</td><td>&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
+            <tr><td>Heap Dump</td><td>&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
+            <tr><td>Enable Heap Dump on OOME</td><td>&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
         </table>
         
 <!-- GOOGLE ANALYTICS TRACKING FOR PROFILER -->    
