--- a/www/description.html
+++ b/www/description.html
@@ -137,7 +137,7 @@
             is running on JDK 1.4.2 or JDK 5.  The table below shows the available features.
         </p>
         <table border=1>
-            <tr><td>Feature</td><td style="text-align:center;" width="15%">1.4.2 <small>local/remote</small></td><td style="text-align:center;" width="15%">5 <small>local/remote</small></td><td style="text-align:center;" width="15%">6 <small>local</small></td><td style="text-align:center;" width="15%">6 <small>remote</small></td></tr>
+            <tr><td><b>Feature</b></td><td style="text-align:center;" width="15%"><b>1.4.2 <small>local/remote</small></b></td><td style="text-align:center;" width="15%"><b>5 <small>local/remote</small></b></td><td style="text-align:center;" width="15%"><b>6 <small>local</small></b></td><td style="text-align:center;" width="15%"><b>6 <small>remote</small></b></td></tr>
             <tr><td>Overview</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
             <tr><td>System Properties (in Overview)</td><td style="text-align:center;">&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
             <tr><td>Monitor</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
