--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,9 @@
 </div>
 
 <h4>Features</h4>
-<p>Current feature set of the tool is described in the <a href="description.html">Introduction to VisualVM</a> document.</p>
+<p>Current feature set of the tool is described in the <a href="description.html">Introduction to VisualVM</a> document.<br>
+The proof-of-concept version of the tool has been presented at JavaOne 2007 as a BOF-9123. You can download the presentation slides <a href="http://weblogs.java.net/blog/mandychung/archive/VisualVM-BOF-2007.pdf">here</a>.
+</p>
 
 <h4>Download</h4>
 <p>You can download the first preview version of the tool <a href="downloads/visualvm_preview1.zip">here</a>. Currently you can get only the binaries, sources will be available soon.</p>
