--- a/www/index.html
+++ b/www/index.html
@@ -60,12 +60,12 @@ urchinTracker();
 </script>
 
 <!-- GOOGLE ANALYTICS TRACKING FOR VISUALVM -->    
-<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+<!--script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-2829344-1";
 urchinTracker();
-</script>
+</script-->
 
 </body>
 </html>
