--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -9,11 +9,13 @@
 <h3><font size="+1">Troubleshooting guide for VisualVM Preview 1</font></h3>
 <br>
 
+<a name="jrehost"></a>
 <h3>VisualVM Application Window Is Empty, Exception Is Thrown</h3>
 <p><b>Description:&nbsp;</b>Main window of VisualVM is empty, <code>java.lang.ClassNotFoundException: sun.jvmstat.monitor.MonitorException</code> may be presented to the user and is logged in the logfile.</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>This happens when VisualVM runs on JRE instead of JDK. To define which JDK will be used for running VisualVM, follow the steps in 
 Getting Started section of the <a href="description.html#getting_started">Introduction to VisualVM</a> document.</p><br>
 
+<a name="jpswin"></a>
 <h3>No Running Local Applications Detected</h3>
 <p><b>Description:&nbsp;</b>There are no running applications shown in the Applications window on the left side (including the VisualVM itself).</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>This can happen on Windows systems, it's a known problem related to the <code>jps</code> JDK tool used by VisualVM to
@@ -21,12 +23,14 @@ Getting Started section of the <a href="description.html#getting_started">Introd
 for details and fix or <i>having temporary directory on a FAT disk</i> - see <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=5042659">this bug detail</a>
 for details and fix.</p><br>
 
+<a name="jstatdremote"></a>
 <h3>No Running Remote Applications Detected</h3>
 <p><b>Description:&nbsp;</b>There are no running applications shown for remote host in the Applications window on the left side.</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>Make sure that the <code>jstatd</code> utility is running on the remote host you want to monitor.
 This is a requirement for VisualVM to be able to discover and access remote Java applications. More information about <code>jstatd</code> can be found
 in Remote Applications section of the <a href="description.html#remote_applications">Introduction to VisualVM</a> document.</p><br>
 
+<a name="classharing"></a>
 <h3>Profiling Does Not Work</h3>
 <p><b>Description:&nbsp;</b>Profiling doesn't work for applications running on JDK 6.0.</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>There is a known problem with dynamic attach which is used for profiling, it may
@@ -34,6 +38,7 @@ in Remote Applications section of the <a href="description.html#remote_applicati
 to the <code>java</code> command starting the app. More information can be found in <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6497639">this</a>
 and <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=75eeb97f40427854daec7d1fcd3?bug_id=6598065">this</a> bug detail.</p><br>
 
+<a name="profmacosx"></a>
 <h3>Profiling Does Not Work on Mac OS X</h3>
 <p><b>Description:&nbsp;</b>Profiling doesn't work for applications running on Developer preview of JDK 6.0 on Mac OS X.</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>Unfortunately profiling does not work with Developer preview of JDK 6.0, due to bug in the JDK. However you can
