Changed topic name in Troubleshooting guide
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@49 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/troubleshooting.html
+++ b/www/troubleshooting.html
@@ -30,7 +30,7 @@ for details and fix.</p><br>
 This is a requirement for VisualVM to be able to discover and access remote Java applications. More information about <code>jstatd</code> can be found
 in Remote Applications section of the <a href="description.html#remote_applications">Introduction to VisualVM</a> document.</p><br>
 
-<a name="classharing"></a>
+<a name="xshare"></a>
 <h3>Profiling Does Not Work</h3>
 <p><b>Description:&nbsp;</b>Profiling doesn't work for applications running on JDK 6.0.</p>
 <p><b>Resolution:&nbsp;&nbsp;</b>There is a known problem with dynamic attach which is used for profiling, it may
