--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,8 @@ The proof-of-concept version of the tool has been presented at JavaOne 2007 as a
 </p>
 
 <h4>Download</h4>
-<p>You can download the first preview version of the tool <a href="downloads/visualvm_preview1.zip">here</a>. Currently you can get only the binaries, sources will be available soon.</p>
+<p>You can download the Preview 2 version of the tool <a href="https://visualvm.dev.java.net/files/documents/7163/76190/visualvm-preview2.zip">here</a>. Currently you can get only the binaries, sources will be available soon.<br>
+   <i>What's new in Preview 2: </i> Working Plugin Center, MBeans tab from JConsole, new About dialog, profiler bugfixes, latest NB platform, usability improvements.</p>
 
 <h4>Troubleshooting</h4>
 <p>Troubleshooting guide for currently known problems can be found <a href="troubleshooting.html">here</a>.</p>
