Document how to install MBean Browser plugin.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@63 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/description.html
+++ b/www/description.html
@@ -133,7 +133,10 @@
         <h3>MBean Browser VisualVM Plugin</h3>
         <p>The MBean Browser is a new VisualVM plugin available in the VisualVM
         (Preview 2) Plugins Center which provides the same functionality as the
-        <a href="http://java.sun.com/javase/6/docs/technotes/guides/management/jconsole.html#gdeap">JConsole's MBeans tab</a>.</p>
+        <a href="http://java.sun.com/javase/6/docs/technotes/guides/management/jconsole.html#gdeap">JConsole's MBeans tab</a>.
+        In order to install it just choose Tools &gt; Plugins from the main menu
+        of VisualVM, select the VisualVM-MBeans plugin and click on the Install
+        button.</p>
         <img src="images/mbean_browser_uc.png"/><br>
         <b>Figure 9: MBean Browser plugin in the VisualVM (Preview 2) Plugins Center</b>
         <p>The MBean Browser plugin allows to browse the MBeans registered in the
