--- a/www/index_test.html
+++ b/www/index_test.html
@@ -61,7 +61,7 @@
           <h4 style="margin-top: 15px; margin-bottom: 5px;">Feature Matrix</h4>
           <p style="margin-top: 0px; margin-bottom: 3px;">
               <table border="1" cellspacing="0">
-                <tr><td valign="center"><b>Feature</b></td><td style="text-align:center;" width="15%"><b>JDK 1.4.2<br><small>local/remote</small></b></td><td style="text-align:center;" width="15%"><b>JDK 5.0<br><small>local/remote</small></b></td><td style="text-align:center;" width="15%"><b>JDK 6.0<br><small>local</small></b></td><td style="text-align:center;" width="15%"><b>JDK 6.0<br><small>remote</small></b></td></tr>
+                <tr><td valign="center"><b>Feature</b></td><td width="15%"><b>JDK 1.4.2<br><small>local/remote</small></b></td><td width="15%"><b>JDK 5.0<br><small>local/remote</small></b></td><td width="15%"><b>JDK 6.0<br><small>local</small></b></td><td width="15%"><b>JDK 6.0<br><small>remote</small></b></td></tr>
                 <tr><td>Overview</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
                 <tr><td>System Properties (in Overview)</td><td style="text-align:center;">&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
                 <tr><td>Monitor</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
