Frontpage for testing purposes - test
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@72 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index_test.html
+++ b/www/index_test.html
@@ -86,7 +86,7 @@
     <!-- END MAIN CONTENTS AREA -->
     
     <!-- DOWNLOADS COLUMN -->
-    <td valign="top">
+    <td valign="bottom">
       
       <table style="border-width: 1px; border-spacing: 0px; border-style: solid; border-color: #696; border-collapse: collapse; width: 230px;">
           <tr>
