Releasing VisualVM Milestone 1
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@84 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/description.html
+++ b/www/description.html
@@ -167,7 +167,7 @@
                 </ul>
             </ul>
 
-        <a name="feature_matrix"></a>
+        <!--a name="feature_matrix"></a>
         <h3>JDK Dependent Feature Matrix</h3>
         <p>The VisualVM features that are available depend on the JDK version that
             is used to run your application.  All features are available if your application
@@ -184,7 +184,7 @@
             <tr><td>Heap Dump</td><td>&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
             <tr><td>Enable Heap Dump on OOME</td><td>&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
             <tr><td>MBean Browser</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
-        </table>
+        </table-->
         
 <!-- GOOGLE ANALYTICS TRACKING FOR PROFILER -->    
 <script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
