--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,8 @@
           <!--                                                               -->
           
           <h4 style="margin-top: 5px; margin-bottom: 5px;">News</h4>
+          <p style="margin-top: 0px; margin-bottom: 3px;"><i>January 15th, 2008:</i> VisualVM Milestone 1 released. Major changes in this release: improved UI, better support
+          for Sun and BEA virtual machines, simple localhost viewer, recognition of some applications (Ant, Tomcat, GlassFish/SJSAS, JBoss, NetBeans etc.).</p>
           <p style="margin-top: 0px; margin-bottom: 3px;"><i>November 19th, 2007:</i> VisualVM Preview 2 released. This release introduces Plugin Center, a repository
           where you can get extensions to VisualVM (currently MBeans browser and VisualGC are available). Other news: new About dialog,
           latest profiler bugfixes, latest NetBeans platform, usability improvements.</p>
@@ -64,12 +66,12 @@
                 <tr><td style="vertical-align: middle;"><b>Feature</b></td><td style="text-align:center;" width="15%"><b>JDK 1.4.2<br><small>local/remote</small></b></td><td style="text-align:center;" width="15%"><b>JDK 5.0<br><small>local/remote</small></b></td><td style="text-align:center;" width="15%"><b>JDK 6.0<br><small>local</small></b></td><td style="text-align:center;" width="15%"><b>JDK 6.0<br><small>remote</small></b></td></tr>
                 <tr><td>Overview</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
                 <tr><td>System Properties (in Overview)</td><td style="text-align:center;">&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
-                <tr><td>Monitor</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
+                <tr><td>Monitor</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
                 <tr><td>Profiler</td><td>&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
                 <tr><td>Thread Dump</td><td>&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
                 <tr><td>Heap Dump</td><td>&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
                 <tr><td>Enable Heap Dump on OOME</td><td>&nbsp</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td>&nbsp</td></tr>
-                <tr><td>MBean Browser</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
+                <tr><td>MBeans Browser</td><td>&nbsp</td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td><td style="text-align:center;"><img src="images/check.png"/></td></tr>
             </table>
           </p>
           
@@ -94,7 +96,7 @@
           <div style="border: 1px solid #696; padding: 5px 5px 5px 10px;">
               Latest release:
               <ul style="margin-left: 10px; padding-left: 10px; margin-top: 3px; padding-top: 3px; margin-bottom: 3px; padding-bottom: 2px;">
-                <li><a href="https://visualvm.dev.java.net/files/documents/7163/76190/visualvm-preview2.zip">Preview 2</a> (zip, 7MB)</li>
+                <li><a href="https://visualvm.dev.java.net/files/documents/7163/82473/visualvm_milestone1.zip">Milestone 1</a> (zip, 7.8MB)</li>
               </ul>
           </div>
 
