License notice added
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@88 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,9 @@
   </tr>
 
 </table>
+<p>
+<b>License:</b> VisualVM is available under <a href="legal/gplv2+ce.html">GNU Public License v.2 w/Classpath Exception</a> 
+</p>
 </div>
 
 <!-- CONTENTS -->
