API -> experimental API
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@93 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
           
           <h4 style="margin-top: 5px; margin-bottom: 8px;">News</h4>
           
-          <p style="margin-top: 0px; margin-bottom: 5px;"><i>February 7th, 2008:</i> VisualVM Milestone 2 released. For this release an API has been defined to
+          <p style="margin-top: 0px; margin-bottom: 5px;"><i>February 7th, 2008:</i> VisualVM Milestone 2 released. For this release an experimental API has been defined to
           allow smooth integration of third-party plugins into VisualVM UI and workflow. This API and the source code will be published soon. The other news in
           Milestone 2: separate threads view for each application, support for coredumps on Linux and Solaris (overview, take thread & heap dump), merged several
           bugfixes from NetBeans profiler. From the Plugin Center you can download MBeans Browser with improved UI, wrapper for JConsole plugins and VisualGC tool.</p>
